java/awt/List/EmptyListEventTest/EmptyListEventTest.java debug assert on Windows

XMLWordPrintable

    • b20
    • generic
    • windows

        When we run java/awt/List/EmptyListEventTest/EmptyListEventTest.java in Windows 7 machine in jtreg it creates "AWT Assertion failure popup" and times out and jtreg throws error.

          1. assert_7b55.png
            11 kB
            Ambarish Rapte
          2. JDK-8198000.JPG
            21 kB
            Jayathirth D V

              Assignee:
              Ambarish Rapte
              Reporter:
              Jayathirth D V
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: