8198000: java/awt/List/EmptyListEventTest/EmptyListEventTest.java debug assert on Windows

Reviewed-by: prr, serb